# autograder

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
.github/workflows/: deploy-github-pages.yml
assets/: formtemplate.typ  manifest.json  sw.js
src/: helpers.rs  image_container.rs  image_helpers.rs  lib.rs  main.rs  point.rs  report.rs  scan.rs  template.rs  template_scan.rs  typst_helpers.rs
src/webapp/: create_form.rs  create_key.rs  create_magic_link.rs  create_template.rs  generate_report.rs  help.rs  mod.rs  utils.rs  webapp.rs
tests/: grading_integration.rs
tests/assets/: key.json  scanner-multipagetiff.tif  template.json
