[package]
name = "autograder"
version = "0.1.0"
edition = "2021"

[dependencies]
imageproc = "0.25"
image = {version = "0.25", default-features = false, features = [
      "jpeg",
      "png",
      "tiff",
      "pnm",
      "bmp"
]}
nalgebra = "0.33.2"
serde = {version = "1.0.214", features= ["derive"]}
serde_json = "1.0.132"
pdf = "0.9.0"
fax = "0.2.4"
tiff = "0.9.1"
clap = {version = "4.5.20", features = ["derive"]}
log = "0.4.22"
wasm-bindgen = "0.2.95"
infer = "0.16.0"
zip = {version = "2.2.0", default-features=false, features=["deflate"]}
csv = "1.3.0"
rayon = "1.10.0"
itertools = "0.13.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
ehttp = "0.5.0"
egui_commonmark = {version="0.18.0", features=["fetch"]}
tokio = {version="1.41.0", features=["sync"]}
js-sys = "0.3.72"
gloo-timers = {version="0.3.0", features=["futures"]}
web-sys = { version = "0.3.72", features = ["Response", "Window", "Request", "Location"] }
egui = "0.29.1"
eframe = {version = "0.29.1", default-features = false, features = [
       "default_fonts",
       "glow",
       "persistence"
]}
wasm-bindgen-futures = "0.4.45"
poll-promise = {version="0.3.0", features=["web"]}
rfd = "0.15.0"

[profile.release]
lto = true
panic = "abort"


