[package]
name = "autograder"
version = "0.2.0"
edition = "2021"

[dependencies]
imageproc = {version = "0.25", default-features = false}
image = {version = "0.25", default-features = false, features = [
      "jpeg",
      "png",
      "tiff",
]}
nalgebra = "0.33.2"
serde = {version = "1.0.214", features=["derive"]}
serde_json = "1.0.132"
pdf = {version="0.9.0", default-features=false, features=["cache"]}
fax = "0.2.4"
tiff = "0.9.1"
log = "0.4.22"
zip = {version = "2.2.0", default-features=false, features=["deflate"]}
csv = "1.3.0"
itertools = "0.13.0"
typst = "0.12.0"
time = "0.3.36"
ttf-parser = "0.25.0"
typst-pdf = "0.12.0"
typst-render = "0.12.0"
ab_glyph = "0.2.29"

[patch.crates-io]
image = { git = "https://github.com/o-tho/image.git" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.10.0"
clap = {version = "4.5.20", features = ["derive"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
infer = "0.16.0"
egui_commonmark = {version="0.18.0", features=["fetch"]}
tokio = {version="1.41.0", features=["sync"]}
js-sys = "0.3.72"
gloo-timers = {version="0.3.0", features=["futures"]}
web-sys = { version = "0.3.72", features = ["Response", "Window", "Request", "Location"] }
egui = "0.29.1"
eframe = {version = "0.29.1", default-features = false, features = [
       "default_fonts",
       "glow",
]}
wasm-bindgen = "0.2.97"
wasm-bindgen-futures = "0.4.45"
serde_cbor = "0.11.2"
snap = "1.1.1"
base64-url = "3.0.0"
rfd = "0.15.0"


